--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World. My name is MXSH0928 - a variation of LiteObject.</h1>
     <p>I'm hosted with GitHub Pages.</p>
 </body>
 
