--- a/index.html
+++ b/index.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
+</head>
 
 <body>
-    <h1>Hello World. My name is MXSH0928 - a variation of LiteObject.</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <header class="site-header sticky-top py-1">
+        <nav class="container d-flex flex-column flex-md-row justify-content-between">
+            <a class="py-2" href="#" aria-label="Product">
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"></circle><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path></svg> -->
+            </a>
+            <a class="py-2 d-none d-md-inline-block" href="http://liteobjects.com/">Lite Objects</a>
+            <a class="py-2 d-none d-md-inline-block" href="https://liteobject.github.io/">My GitHub Pages</a>
+            <a class="py-2 d-none d-md-inline-block" href="https://github.com/LiteObject">Git Repos</a>
+        </nav>
+    </header>
+
+    <main>
+        <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+            <div class="col-md-5 p-lg-5 mx-auto my-5">
+                <h1 class="display-4 fw-normal">Hello World. My name is MXSH0928 - a variation of LiteObject.</h1>
+                <p class="lead fw-normal">
+                    
+                    And an even wittier subheading to boot. Jumpstart your marketing efforts with
+                    this example based on Apple’s marketing pages.                
+                </p>
+                <p>I'm hosted with GitHub Pages.</p>
+                <a class="btn btn-outline-secondary" href="http://liteobjects.com/">Visit Lite Objects</a>
+            </div>
+            <div class="product-device shadow-sm d-none d-md-block"></div>
+            <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+        </div>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
